tests/int/list_command/snapshots/integration__int__list_command__error_cases__should_error_for_invalid_depth_zero.snap
---
source: tests/int/list_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - list
    - "-d"
    - "0"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '0' for '--depth <DEPTH>': depth must be at least 1

For more information, try '--help'.
