tests/int/list_command/snapshots/integration__int__list_command__error_cases__should_error_for_nonexistent_module.snap
---
source: tests/int/list_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - nonexistent_module
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module 'nonexistent_module' not found
